finish crypto motivation

--- a/Poject1/Project1.tex
+++ b/Poject1/Project1.tex
@@ -205,7 +205,22 @@ If this process performed on Figure \ref{fig1} would result in Figure \ref{fig5}
 
 \subsection{Motivation for choice of topic}
 
-\subsection{Example of topic}
+I chose cryptography because I have always been interested in cryptography, it's a perfect marriage between
+math and computer science. I had never heard of Linear Algebra being involved in cryptography so I decided to
+research this topic so that I could learn more about how they relate. I had heard about various other methods
+of implementing cryptography, but nothing that resembled a Hill Cipher, so I was intrigued by this new approach.
+
+Cryptography is one field that I have considered researching the future, so it has been helpful to learn about
+another way that it can be implemented. While a Hill Cipher may not be very secure on its own, it can help to
+improve the diffusion of other encryption algorithms, so it will be a nice tool to have in the future. 
+Lattice-based encryption on the other hand seem as though they might become more popular once quantum computers
+become more prevalent, so it might be very useful to have knowledge about Lattice-based encryption in the future.
+
+Studying Lattice-based encryption has also help me to better understanding linear combinations, and how a lattice
+and span relate to each other and how hard problems involving them can be to solve.
+
+\subsection{Example of Hill Cipher}
+
 
 The following piece of text "I love MATH2270" can be encrypted using a matrix by first converting the characters
 of the text to numbers (in this case we will use there ascii codes).
