--- a/Poject1/sources.bib
+++ b/Poject1/sources.bib
@@ -20,3 +20,49 @@
     year = "2013",
     publisher = "No Startch Press"
 }
+
+@book{menezes97,
+    author = "Alfred J. Menezes and Paul C. van Oorschot and Scott A. Vanstone",
+    title = "Handbook of applied cryptograhpy",
+    year = "1997",
+    publisher = "CRC Press LLC"
+}
+
+@article{zwicke03,
+    author = "Andrew Zwicke",
+    title = "An Introduction to Modern Cyrptosystems",
+    year = "2003",
+    publisher = "SANS Institute"
+}
+
+@article{overbey05,
+    author = "Jeffrey Overbey and William Travis and Jerzy Wojdylo",
+    title = "On The Keyspace Of The Hill Cipher",
+    year = "2005",
+    journal = "Cryptologia",
+    volume = "29",
+    pages = "59-72"
+}
+
+@article{hill29,
+    author = "Lester S. Hill",
+    title = "Cryptography in an Algebraic Alphabet",
+    year = "1929",
+    journal = "The American Mathematical Monthly",
+    volume = "36",
+    pages = "306"
+}
+
+@article{ajtai98,
+    author = "Miklós Ajtai",
+    title = "The shortest vector problem in L2 is NP-hard for randomized reductions",
+    year = "1998",
+    journal = "Proceedings of the thirtieth annual ACM symposium on Theory of computing - STOC '98"
+}
+
+@article{micciancio08,
+    author = "Daniele Micciancio and Oded Regev",
+    title = "Lattice-based Cryptography",
+    year = "2008",
+    journal = "Post-Quantum Cryptography"
+}
